# VibeQuant

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  README_zh.md  SECURITY.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: test.yml
config/: email.example.yaml  llm.example.yaml
data/sample/: DEMO.csv
src/: __init__.py  cli.py  config.py  data.py  dsl.py  intent.py  planner.py  risk.py  runner.py  strategy_source.py
src/adapters/: __init__.py  akquant_engine.py  akquant_factor.py
src/data_sources/: __init__.py  constituents.py  etf.py  etf_pool.py  market.py  universe_builder.py
src/factors/: __init__.py  analysis.py  registry.py  validation.py
src/live/: __init__.py  deploy.py
src/llm/: __init__.py  client.py
src/memory/: __init__.py  store.py
src/report/: __init__.py  builder.py
src/research/: __init__.py  auto_optimize.py  ingest.py  llm_ideas.py  refine.py  tasks.py
src/strategies/: __init__.py  bollinger.py  buy_hold.py  custom.py  factor_rotation.py  ma_cross.py  momentum.py  rsi_reversion.py
src/tools/: __init__.py  context.py  steps.py
tasks/: csv_demo.yaml  factor_etf_demo.yaml  ma_cross_demo.yaml  ma_cross_demo_etf.yaml  rsi_demo_zh.yaml
tests/: conftest.py  test_factor_and_ingest.py  test_pipeline.py  test_rotation.py  test_v3_features.py  test_v4_features.py  test_v5_features.py  test_v6_features.py  test_validation.py
webui/: server.py
webui/static/: index.html
(+25 files in other folders)
